[package]
name = "lumberjack"
version = "0.2.1"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-cloudwatchlogs = { version = "1.113.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
serde_json = "1.0.145"
tokio = {version="1.48.0", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
