[package]
name = "lumberjack"
version = "0.2.3"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-cloudwatchlogs = { version = "1.113.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
tokio = {version="1.48.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
arboard = { version = "3.6.1", default-features = false }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
